new work with osseni

--- a/app/views/dashboard/accueil.html.erb
+++ b/app/views/dashboard/accueil.html.erb
@@ -135,7 +135,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-7 py-5">
                     <h1 class="mb-4 text-light" style="z-index:1000">Bienvenue <%=current_user.nom%> <%=current_user.prenom%></h1>
-                    <marquee behavior="scroll" direction="left" class="text-cdae" style="font-size: 20px; font-weight: bold;">
+                    <marquee behavior="scroll" direction="left" class="text-cdae" style="font-size: 20px; font-weight: bold; background-color: aliceblue;">
                     Bienvenue chez CDAE ! Nous sommes ravis de vous accueillir et de contribuer à la réussite de vos projets agro-économiques. Merci pour votre confiance !
                     </marquee>
                     
