--- a/app/views/layouts/dashboard/_sidebar.html.erb
+++ b/app/views/layouts/dashboard/_sidebar.html.erb
@@ -4,6 +4,9 @@
 
           <ul>
                 <li class="menu-title text-light">Menu</li>
+                 <li>
+                    <a href="<%=dashboard_accueil_path%>"><i class="fa fa-user-o"></i> <span>Accueil</span></a>
+                </li>
                 <li class="active">
                     <a href="<%=dashboard_index_path%>"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                 </li>
@@ -17,7 +20,7 @@
                     <a href="<%=remboursements_path%>"><i class="fa fa-calendar-check-o"></i> <span>Remboursement</span></a>
                 </li>
                 <li>
-                    <a href="<%=dashboard_bilan_path%>"><i class="fa fa-calendar-check-o"></i> <span>Bilan Client</span></a>
+                    <a href="<%=balances_path%>"><i class="fa fa-calendar-check-o"></i> <span>Bilan Client</span></a>
                 </li>
                 <li>
                     <a href="<%=herbicides_path%>"><i class="fa fa-calendar-check-o"></i> <span>Les herbicides</span></a>
