--- a/app/views/users/complete_profile.html.erb
+++ b/app/views/users/complete_profile.html.erb
@@ -14,7 +14,7 @@
                         <div class="form-group row">
                             <label class="col-form-label col-md-2">Votre communue</label>
                             <div class="col-md-10">
-                                <%= f.select :commune, ["Cotonou", "Parakou", "Porto-Novo"], { prompt: "Choisissez votre commune" }, class: "form-control" %>
+                                <%= f.select :commune, ["N'DALI", "Pèrèrè", "Sinandé"], { prompt: "Choisissez votre commune" }, class: "form-control" %>
                             </div>
                         </div>
 
